--- a/HomeMates/VIew/Lobby.storyboard
+++ b/HomeMates/VIew/Lobby.storyboard
@@ -61,21 +61,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Home_48px" translatesAutoresizingMaskIntoConstraints="NO" id="idq-Ee-uyT">
-                                <rect key="frame" x="147.5" y="84" width="80" height="80"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HomeMates" translatesAutoresizingMaskIntoConstraints="NO" id="idq-Ee-uyT">
+                                <rect key="frame" x="30" y="84" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="Tif-hN-7WZ"/>
                                     <constraint firstAttribute="width" constant="80" id="cPE-0V-slw"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID: GroupID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GNs-sp-xiL">
-                                <rect key="frame" x="118" y="217" width="139" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" name="B1"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbp-la-C1j">
-                                <rect key="frame" x="248" y="177" width="20" height="20"/>
+                                <rect key="frame" x="315" y="99" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="Zbu-GY-ija"/>
                                     <constraint firstAttribute="width" constant="20" id="yPX-l4-n8q"/>
@@ -87,43 +81,50 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="HkG-ja-O0R">
-                                <rect key="frame" x="0.0" y="248" width="375" height="419"/>
+                                <rect key="frame" x="0.0" y="224" width="375" height="443"/>
                                 <color key="backgroundColor" name="W1"/>
                                 <connections>
                                     <outlet property="dataSource" destination="vJS-VE-AjH" id="iGD-1N-yZs"/>
                                     <outlet property="delegate" destination="vJS-VE-AjH" id="vrP-mc-O8f"/>
                                 </connections>
                             </tableView>
-                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="GroupName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GC7-Yi-r5l" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
-                                <rect key="frame" x="139" y="180" width="97" height="21"/>
-                                <color key="textColor" name="B1"/>
+                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="GroupName" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GC7-Yi-r5l" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                                <rect key="frame" x="130" y="102" width="173" height="21"/>
+                                <color key="textColor" name="Y4"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rh-pw-oAa">
-                                <rect key="frame" x="139" y="200" width="97" height="1"/>
-                                <color key="backgroundColor" name="B1"/>
+                                <rect key="frame" x="130" y="122" width="173" height="1"/>
+                                <color key="backgroundColor" name="Y4"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="6nf-eN-daH"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID: GroupID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GNs-sp-xiL">
+                                <rect key="frame" x="130" y="143" width="139" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="Y4"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="GC7-Yi-r5l" firstAttribute="centerX" secondItem="idq-Ee-uyT" secondAttribute="centerX" id="29h-w8-b5H"/>
                             <constraint firstItem="LR4-YV-gkv" firstAttribute="trailing" secondItem="HkG-ja-O0R" secondAttribute="trailing" id="3Vx-5T-AfF"/>
-                            <constraint firstItem="GC7-Yi-r5l" firstAttribute="top" secondItem="idq-Ee-uyT" secondAttribute="bottom" constant="16" id="3zH-MR-fWK"/>
                             <constraint firstItem="5rh-pw-oAa" firstAttribute="trailing" secondItem="GC7-Yi-r5l" secondAttribute="trailing" id="4xN-tT-KRc"/>
-                            <constraint firstItem="GNs-sp-xiL" firstAttribute="top" secondItem="GC7-Yi-r5l" secondAttribute="bottom" constant="16" id="By9-xR-boI"/>
+                            <constraint firstItem="GNs-sp-xiL" firstAttribute="bottom" secondItem="idq-Ee-uyT" secondAttribute="bottom" id="9S8-3l-8kf"/>
                             <constraint firstItem="5rh-pw-oAa" firstAttribute="bottom" secondItem="GC7-Yi-r5l" secondAttribute="bottom" id="I49-zd-DfA"/>
-                            <constraint firstItem="HkG-ja-O0R" firstAttribute="top" secondItem="GNs-sp-xiL" secondAttribute="bottom" constant="10" id="Kt3-m0-USY"/>
                             <constraint firstItem="LR4-YV-gkv" firstAttribute="bottom" secondItem="HkG-ja-O0R" secondAttribute="bottom" id="MQz-fm-aPD"/>
-                            <constraint firstItem="idq-Ee-uyT" firstAttribute="centerX" secondItem="34Z-6s-y9E" secondAttribute="centerX" id="OZa-9p-qpP"/>
                             <constraint firstItem="5rh-pw-oAa" firstAttribute="leading" secondItem="GC7-Yi-r5l" secondAttribute="leading" id="Rlp-6k-CPV"/>
                             <constraint firstItem="qbp-la-C1j" firstAttribute="bottom" secondItem="GC7-Yi-r5l" secondAttribute="bottom" constant="-4" id="TjS-i0-sei"/>
-                            <constraint firstItem="GNs-sp-xiL" firstAttribute="centerX" secondItem="34Z-6s-y9E" secondAttribute="centerX" id="e2u-74-Z6K"/>
+                            <constraint firstItem="GNs-sp-xiL" firstAttribute="top" secondItem="GC7-Yi-r5l" secondAttribute="bottom" constant="20" id="Uqw-SY-6ho"/>
+                            <constraint firstItem="HkG-ja-O0R" firstAttribute="top" secondItem="idq-Ee-uyT" secondAttribute="bottom" constant="60" id="bsh-IZ-2T8"/>
+                            <constraint firstItem="LR4-YV-gkv" firstAttribute="trailing" secondItem="qbp-la-C1j" secondAttribute="trailing" constant="40" id="e85-FK-FPm"/>
+                            <constraint firstItem="GC7-Yi-r5l" firstAttribute="leading" secondItem="idq-Ee-uyT" secondAttribute="trailing" constant="20" id="mE7-Xf-QCK"/>
                             <constraint firstItem="HkG-ja-O0R" firstAttribute="leading" secondItem="LR4-YV-gkv" secondAttribute="leading" id="md4-O7-Heh"/>
+                            <constraint firstItem="idq-Ee-uyT" firstAttribute="leading" secondItem="LR4-YV-gkv" secondAttribute="leading" constant="30" id="pWJ-fa-8ms"/>
                             <constraint firstItem="idq-Ee-uyT" firstAttribute="top" secondItem="LR4-YV-gkv" secondAttribute="top" constant="20" id="rh3-1g-uUZ"/>
+                            <constraint firstItem="GNs-sp-xiL" firstAttribute="leading" secondItem="GC7-Yi-r5l" secondAttribute="leading" id="sxd-ph-4bQ"/>
                             <constraint firstItem="qbp-la-C1j" firstAttribute="leading" secondItem="GC7-Yi-r5l" secondAttribute="trailing" constant="12" id="ylC-AO-8hT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LR4-YV-gkv"/>
@@ -133,6 +134,7 @@
                         <outlet property="editButton" destination="qbp-la-C1j" id="5Jz-KE-Puc"/>
                         <outlet property="groupIdLbl" destination="GNs-sp-xiL" id="qo0-vr-kbN"/>
                         <outlet property="groupNameTextField" destination="GC7-Yi-r5l" id="xCw-k6-XIU"/>
+                        <outlet property="homematesImage" destination="idq-Ee-uyT" id="HLT-RV-tPc"/>
                         <outlet property="tableView" destination="HkG-ja-O0R" id="T2H-z6-15e"/>
                     </connections>
                 </viewController>
@@ -164,16 +166,16 @@
     </scenes>
     <resources>
         <image name="Editor_24px" width="24" height="24"/>
-        <image name="Home_48px" width="48" height="48"/>
+        <image name="HomeMates" width="125" height="125"/>
         <image name="Tick_20px" width="20" height="20"/>
-        <namedColor name="B1">
-            <color red="0.27843137254901962" green="0.32156862745098042" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="W1">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Y1">
             <color red="0.97254901960784312" green="0.81176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Y4">
+            <color red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
