--- a/HomeMates/VIew/Loading.storyboard
+++ b/HomeMates/VIew/Loading.storyboard
@@ -19,39 +19,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rVq-Vp-Nmu">
-                                <rect key="frame" x="107" y="446" width="200" height="4"/>
-                                <color key="backgroundColor" name="Y2"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GIs-eT-7j3">
+                                <rect key="frame" x="107" y="445" width="200" height="6"/>
+                                <color key="backgroundColor" name="Y0"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="OlG-2L-50B"/>
-                                    <constraint firstAttribute="height" constant="4" id="cKh-S0-75c"/>
+                                    <constraint firstAttribute="height" constant="6" id="27b-hE-ZPv"/>
+                                    <constraint firstAttribute="width" constant="200" id="3A7-p4-2jx"/>
                                 </constraints>
-                                <color key="progressTintColor" name="P1"/>
-                                <color key="trackTintColor" name="Y2"/>
-                            </progressView>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HomeMates" translatesAutoresizingMaskIntoConstraints="NO" id="jRH-dM-gAJ">
+                                <rect key="frame" x="157" y="325" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="R4P-bg-9Oe"/>
+                                    <constraint firstAttribute="height" constant="100" id="vru-7w-Vyh"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="rVq-Vp-Nmu" firstAttribute="centerY" secondItem="pmF-dp-Xk7" secondAttribute="centerY" id="fVq-lV-l2T"/>
-                            <constraint firstItem="rVq-Vp-Nmu" firstAttribute="centerX" secondItem="pmF-dp-Xk7" secondAttribute="centerX" id="qOM-wB-mmm"/>
+                            <constraint firstItem="GIs-eT-7j3" firstAttribute="centerY" secondItem="pmF-dp-Xk7" secondAttribute="centerY" id="KlF-Xv-nCR"/>
+                            <constraint firstItem="GIs-eT-7j3" firstAttribute="top" secondItem="jRH-dM-gAJ" secondAttribute="bottom" constant="20" id="cAd-hK-aDY"/>
+                            <constraint firstItem="GIs-eT-7j3" firstAttribute="centerX" secondItem="pmF-dp-Xk7" secondAttribute="centerX" id="kik-JJ-dSk"/>
+                            <constraint firstItem="jRH-dM-gAJ" firstAttribute="centerX" secondItem="pmF-dp-Xk7" secondAttribute="centerX" id="qkO-lJ-2a3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="E7Q-RK-hvg"/>
                     </view>
                     <connections>
-                        <outlet property="progressView" destination="rVq-Vp-Nmu" id="2Fa-Bv-1gE"/>
+                        <outlet property="backgroundView" destination="GIs-eT-7j3" id="JQQ-b2-FR4"/>
+                        <outlet property="logoView" destination="jRH-dM-gAJ" id="3UY-t3-yON"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PrR-M1-qpg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="146" y="211"/>
+            <point key="canvasLocation" x="639" y="117"/>
         </scene>
     </scenes>
     <resources>
-        <namedColor name="P1">
-            <color red="0.62000000476837158" green="0.2199999988079071" blue="0.32499998807907104" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Y2">
-            <color red="1" green="0.70196078431372544" blue="0.094117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="HomeMates" width="125" height="125"/>
+        <namedColor name="Y0">
+            <color red="0.9882352941176471" green="0.8784313725490196" blue="0.46274509803921571" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
