--- a/HomeMates/VIew/Profile/TotalPointsTableViewCell.xib
+++ b/HomeMates/VIew/Profile/TotalPointsTableViewCell.xib
@@ -21,7 +21,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="任務名稱底家" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfm-CC-7Tz">
-                        <rect key="frame" x="76" y="16" width="92" height="18"/>
+                        <rect key="frame" x="64" y="16" width="92" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="CP7-Nn-onS"/>
                         </constraints>
@@ -30,26 +30,25 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="積分放在這" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lev-3D-Ys5">
-                        <rect key="frame" x="76" y="42" width="132" height="14"/>
+                        <rect key="frame" x="64" y="42" width="144" height="48"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50 點" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQe-pj-RJS">
-                        <rect key="frame" x="313" y="23" width="67" height="33"/>
+                        <rect key="frame" x="313" y="57" width="67" height="33"/>
                         <fontDescription key="fontDescription" type="system" pointSize="27"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="Sct-Cz-GZ3">
-                        <rect key="frame" x="16" y="0.0" width="48" height="116.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile_48px" translatesAutoresizingMaskIntoConstraints="NO" id="Sct-Cz-GZ3">
+                        <rect key="frame" x="16" y="0.0" width="36" height="116.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="48" id="Nih-x9-Vh6"/>
-                            <constraint firstAttribute="width" constant="48" id="Qki-aS-3fM"/>
+                            <constraint firstAttribute="width" constant="36" id="Qki-aS-3fM"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="累計積分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lo-v3-gHg">
-                        <rect key="frame" x="236" y="38" width="62" height="18"/>
+                        <rect key="frame" x="236" y="72" width="62" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="eb9-5w-eGA"/>
                         </constraints>
@@ -87,7 +86,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="profile" width="24" height="24"/>
+        <image name="Profile_48px" width="16" height="16"/>
         <namedColor name="Y4">
             <color red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
