--- a/HomeMates/VIew/Task/TaskListTableViewCell.xib
+++ b/HomeMates/VIew/Task/TaskListTableViewCell.xib
@@ -21,16 +21,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="任務名稱在這邊" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCV-HC-5oE">
-                        <rect key="frame" x="76" y="12" width="107.5" height="47.5"/>
+                        <rect key="frame" x="64" y="12" width="107.5" height="47.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="DYp-d8-E6Z">
-                        <rect key="frame" x="16" y="0.0" width="48" height="97.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DYp-d8-E6Z">
+                        <rect key="frame" x="16" y="0.0" width="36" height="97.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="48" id="iyJ-bd-qNC"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="48" id="oFy-Cc-9ms"/>
+                            <constraint firstAttribute="width" constant="36" id="iyJ-bd-qNC"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="積分: 1 點" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ozb-Be-h0o">
@@ -43,7 +42,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="每 6 天一次" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVi-jk-0lZ">
-                        <rect key="frame" x="76" y="67.5" width="79" height="18"/>
+                        <rect key="frame" x="64" y="67.5" width="79" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="nPZ-Vz-WYo"/>
                         </constraints>
@@ -78,7 +77,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="profile" width="24" height="24"/>
         <namedColor name="Y4">
             <color red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
